# forgetful-gardner

./: .env  .gitignore  README.md  docker-compose.yaml  forgetful_gardner_playground.py  pyproject.toml
src/forgetful_gardner/backend/src/: main.py
src/forgetful_gardner/frontend/: Dockerfile  pyproject.toml
src/forgetful_gardner/frontend/src/: entrypoint.sh  forgetfulgardner.html  main.py
src/forgetful_gardner/frontend/src/processing_labels/: garden_label_processor.py
src/forgetful_gardner/frontend/src/processing_labels/image_processor/: image_processor.py  image_reader.py  image_utils.py
src/forgetful_gardner/frontend/src/static/styles/: styles.css
src/forgetful_gardner/frontend/src/templates/: index.html
src/forgetful_gardner/llm_runner/src/: pull-llm.sh
test/: test_backend.py
test/image_processor/test_images/: test_images.txt  test_images_caredata.text  test_images_json.text
