[project]
name = "forgetful-gardner"
version = "0.1.0"
author = "Ariba S"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncio>=3.4.3",
    "fastapi>=0.115.14",
    "httpx>=0.28.1",
    "matplotlib>=3.10.3",
    "opencv-contrib-python>=4.11.0.86",
    "pytesseract>=0.3.13",
    "uvicorn[standard]>=0.34.3",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.12.0",
]

[dependency-groups]
dev = [
    "marimo>=0.14.7",
    "ruff>=0.12.0",
]
